@@ -1,16 +1,18 @@
 ADDICTIONS=\
 Property   : Addictions\n\r\
 Targets    : Mobs\n\r\
-Parameters : item name\n\r\
-Example    : pot pie\n\r\
+Parameters : [ITEM NAME];...\n\r\
+Example    : pot pie;sugar\n\r\
 Description: \n\r\
-This ability governs addictions to food, drink, or smoking.  The parameter \
+This ability governs addictions to food, drink, smoking, or sniffing.  The parameter \
 is the substring to match in the name of the item.  The player with an addiction \
 will be annoyed unless he gets his "fix" every rl hour.  Players can only become \
 addiction through the engine by smoking, or by a drink infected with inebriation, \
 alcohol, or liquor. The player can either "ride out" the addiction for 24 hours, \
 suffering increasingly annoying messages as he goes, or he can keep making his fix. \
-Addictions are not diseases, and can not be cured with magic or restoration.
+Addictions are not diseases, and can not be cured with magic or restoration. Multiple \
+substances can be listed by separating with semicolons, and the matches are made by \
+parts of item names.
 
 AGE=\
 Property   : Age\n\r\
